<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="WriteModel"
            type="com.example.train.viewmodel.WriteModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WriteActivity">

    <EditText
        android:id="@+id/Write_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="500dp"
        />


        <EditText
            android:id="@+id/Write_contents"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="54dp"
            android:hint="@string/contents"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Write_title" />

    <Button
        android:id="@+id/Write_writeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Write"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Write_contents" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
